syntax = "proto3";

package pb;

import "google/api/annotations.proto";

// The greeter service definition.
service Authenticator {
  // Sends a greeting
  rpc LogIn (LogInRequest) returns (AuthResponse) {
    option (google.api.http) = {
        post: "/v1/login"
        body: "*"
    };
  }
  rpc Validate (CredentialsRequest) returns (AuthResponse) {
    option (google.api.http) = {
          post: "/v1/validate"
          body: "*"
    };
  }
}

// The request message containing the user's name.
message LogInRequest {
  string username = 1;
  string password = 2;
}

message CredentialsRequest{
	string token = 1;
}

// The response message containing the greetings
message AuthResponse {
  string token = 1;
  string validUntil = 2;
}